@@ -42,14 +42,14 @@ DEFINES=$(PLATFORM)
 OBJS=main.o timers.o sets.o pool.o table.o regexp.o dirtree.o support.o \
      netaddr.o inet.o child.o parser.o log.o xferlog.o bindings.o netacl.o \
      class.o scoreboard.o help.o feat.o netio.o response.o ident.o data.o \
-     modules.o display.o auth.o fsio.o mkhome.o ctrls.o event.o var.o
+     modules.o display.o auth.o fsio.o mkhome.o ctrls.o event.o var.o trace.o
 BUILD_OBJS=src/main.o src/timers.o src/sets.o src/pool.o src/table.o \
            src/regexp.o src/dirtree.o src/support.o src/netaddr.o src/inet.o \
            src/child.o src/parser.o src/log.o src/xferlog.o src/bindings.o \
            src/netacl.o src/class.o src/scoreboard.o src/help.o src/feat.o \
            src/netio.o src/response.o src/ident.o src/data.o src/modules.o \
            src/display.o src/auth.o src/fsio.o src/mkhome.o src/ctrls.o \
-           src/event.o src/var.o
+           src/event.o src/var.o src/trace.o
 
 SHARED_MODULE_DIRS=@SHARED_MODULE_DIRS@
 SHARED_MODULE_OBJS=@SHARED_MODULE_OBJS@
