@@ -475,6 +475,13 @@ AC_ARG_ENABLE(sia,
     fi
   ])
 
+dnl Trace support.
+AC_ARG_ENABLE(trace,
+  [AC_HELP_STRING(
+    [--disable-trace],
+    [disable trace support (default=no)])
+  ])
+
 dnl Enable developer code
 pr_devel_cflags="-DPR_DEVEL -g -Wcast-align -Wchar-subscripts -Winline -Wstrict-prototypes -Wmissing-declarations -Wnested-externs -Wpointer-arith -Wshadow -Wundef"
 pr_devel_libs=""
@@ -1373,6 +1380,11 @@ if test x"$enable_sendfile" != xno ; then
       ac_build_addl_libs="-lsendfile $ac_build_addl_libs"
       ;;
   esac
+fi
+
+dnl Trace checks
+if test x"$enable_trace" != xno ; then
+  AC_DEFINE(PR_USE_TRACE, 1, [Define for trace support])
 fi
 
 dnl Custom-rolled macro for checking return type of setgrent(3)
