@@ -2,7 +2,7 @@
  * ProFTPD - FTP server daemon
  * Copyright (c) 1997, 1998 Public Flood Software
  * Copyright (c) 1999, 2000 MacGyver aka Habeeb J. Dihu <macgyver@tos.net>
- * Copyright (c) 2001, 2002, 2003, 2004 The ProFTPD Project team
+ * Copyright (c) 2001-2006 The ProFTPD Project team
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -25,7 +25,7 @@
  */
 
 /* Generic configuration and standard header file includes.
- * $Id: conf.h,v 1.62 2005-06-30 00:39:16 castaglia Exp $
+ * $Id: conf.h,v 1.63 2006-05-18 15:38:44 castaglia Exp $
  */
 
 #ifndef PR_CONF_H
@@ -418,6 +418,7 @@ typedef struct {
 #include "ctrls.h"
 #include "event.h"
 #include "var.h"
+#include "trace.h"
 #include "compat.h"
 #include "pr-syslog.h"
 
