@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.756 2006-05-17 16:18:32 castaglia Exp $
+$Id: NEWS,v 1.757 2006-05-18 15:38:43 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -55,6 +55,8 @@ CVS
 - Bug 2785 - IPv4-mapped IPv6 network ACLs not matched properly against
   IPv4 connections.
 - Bug 2732 - Support for DisplayChdir, rather than DisplayFirstChdir.
+- Bug 2506 - Better ability to configure what sort of debug output to generate.
+  This is done via the new Trace and TraceLog directives.
 
 1.3.0 - Released 16-Apr-2006
 --------------------------------
